--- a/infra/elk/config/logstash.conf
+++ b/infra/elk/config/logstash.conf
@@ -1,6 +1,6 @@
 # =============================================================================
 # КОНФИГУРАЦИЯ LOGSTASH ДЛЯ ОБРАБОТКИ ЛОГОВ DOCKER КОНТЕЙНЕРОВ
-# =============================================================================
+# ==================================================================
 # Logstash - это сервер обработки данных, который принимает логи от Filebeat,
 # обрабатывает их (парсинг, фильтрация, обогащение) и отправляет в Elasticsearch.
 #
@@ -29,6 +29,11 @@ input {
 # БЛОК ФИЛЬТРОВ (FILTER) - ОБРАБОТКА И ПРЕОБРАЗОВАНИЕ ДАННЫХ
 # =============================================================================
 filter {
+  # Фильтруем избыточные и проблемные MongoDB логи
+  if [container][name] =~ /^mongodb_/ {
+    drop { }
+  }
+
   # Обрабатываем только события от Docker контейнеров (содержат поле [container])
   if [container] {
 
@@ -160,9 +165,22 @@ filter {
 # =============================================================================
 output {
   # Основной вывод в Elasticsearch для долгосрочного хранения и поиска
+    # hosts => [ "${ES_HOST}" ]                    # Адрес Elasticsearch из переменной среды
+    # index => "docker-logs-%{+YYYY.MM.dd}"       # Индекс с датой (новый индекс каждый день)
+
+  if [service_name] {
   elasticsearch {
-    hosts => [ "${ES_HOST}" ]                    # Адрес Elasticsearch из переменной среды
-    index => "docker-logs-%{+YYYY.MM.dd}"       # Индекс с датой (новый индекс каждый день)
+    hosts => ["${ES_HOST}"]
+    index => "logs-%{service_name}"
+    action => "create"
+    }
+  } else {
+    elasticsearch {
+      hosts => ["${ES_HOST}"]
+      index => "logs-common"
+      action => "create"
+    }
+  }
 
     # Дополнительные настройки для производительности:
     # template_name => "docker-logs"             # Имя шаблона индекса
@@ -177,7 +195,7 @@ output {
   # stdout {
   #   codec => rubydebug                         # Форматированный вывод для отладки
   # }
-}
+
 
 # =============================================================================
 # ПРИМЕЧАНИЯ ПО ПРОИЗВОДИТЕЛЬНОСТИ И НАСТРОЙКЕ:
