Подключаю rabbitmq и celery к event-generator.

--- a/services/event-generator/src/Dockerfile
+++ b/services/event-generator/src/Dockerfile
@@ -32,4 +32,6 @@ COPY services/event-generator/src/ .
 
 RUN chmod +x ./scripts/entrypoint.sh
 
+RUN chmod +x ./scripts/run_celery.sh
+
 CMD ["./scripts/entrypoint.sh"]
