--- a/infra/rabbit/rabbitmq.conf
+++ b/infra/rabbit/rabbitmq.conf
@@ -5,8 +5,8 @@ cluster_name = rabbit-cluster
 cluster_keepalive_interval = 10000
 
 # Настройки пользователя по умолчанию
-default_user = rabbit_user
-default_pass = pass
+default_user = $(RABBITMQ_USER)
+default_pass = $(RABBITMQ_PASS)
 
 # Настройки статистики - отключаем устаревшую функцию
 management.rates_mode = basic
