Настройки стандартного env

--- a/.env.example
+++ b/.env.example
@@ -52,10 +52,10 @@ TRACE_PERCENT=1.0
 
 ##APP_TRACING
 ##Включение/Выключение трассировки
-TRACING=False
+TRACING=True
 
 ##APP_GLITCH_TIP
-IS_GLITCHTIP_ENABLED=False
+IS_GLITCHTIP_ENABLED=True
 
 ###DJANGO
 DJANGO_SECRET_KEY=3m(jzmjkpzg@ej5q2qx)%ctw+q8wv02&=7ad@xbo*vkrs2r_
@@ -80,13 +80,17 @@ KAFKA_HOST3=kafka-2
 # KAFKA_HOST3=localhost
 KAFKA_PORT3=9092
 
-
 ##TOPICS
 KAFKA_LIKE_TOPIC=user_metric_like_event
 KAFKA_COMMENT_TOPIC=user_metric_comment_event
 KAFKA_WATCH_PROGRESS_TOPIC=user_metric_watch_progress_event
 KAFKA_WATCH_LIST_TOPIC=user_metric_add_to_watch_list_event
 KAFKA_OTHER_TOPIC=user_metric_other_event
+
+#RABBITMQ
+RABBITMQ_USER=user
+RABBITMQ_PASS=pass
+RABBITMQ_ERLANG_COOKIE=e379f4f0-1e40-4286-af2e-2f8b48c34056
 
 #MONGODB
 MONGODB_HOST=mongodb_router
@@ -109,7 +113,7 @@ GLITCHTIP_URL_DOMAIN=http://localhost:8005
 GLITCHTIP_URL_EMAIL=consolemail://
 # адрес эл почты, так как грузим в консоль то это необязательный параметр
 GLITCHTIP_EMAIL=noreply@localhost
-GLITCHTIP_URL=<ваш url>    # пример http://8a1960e7185f4431af9f52d521a9c03d@glitchtip-web:8000/1
+GLITCHTIP_URL=http://27aa750672e344da8d0c83a6ae06877f@glitchtip-web:8000/1    # пример http://8a1960e7185f4431af9f52d521a9c03d@glitchtip-web:8000/1
 
 #content-actions-service
 FILM_VALIDATION_URL="http://async-api:8000/async/api/v1/films/{film_id}"
