--- a/infra/rabbit/rabbitmq.conf
+++ b/infra/rabbit/rabbitmq.conf
@@ -29,4 +29,4 @@ vm_memory_high_watermark.relative = 0.6
 disk_free_limit.relative = 2.0
 
 # Настройки сети
-loopback_users.guest = false
+loopback_users.guest = true
