Задаю MVP структуру под Notifications-service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,6 +125,8 @@ services:
         condition: service_healthy
       postgres:
         condition: service_healthy
+    ports:
+      - 8000:8000
     cpus: "1"
     mem_limit: 256M
     healthcheck:
@@ -227,6 +229,22 @@ services:
       auth-api:
         condition: service_healthy
     restart: "no"
+
+  notifications-api:
+    container_name: notifications-api-container
+    env_file:
+      - .env
+    build:
+      context: .
+      dockerfile: services/notification-service/src/Dockerfile
+    ports:
+      - 8001:8000
+    depends_on:
+      postgres:
+        condition: service_healthy
+      auth-api:
+        condition: service_healthy
+    restart: "on-failure"
 
   nginx:
     container_name: nginx
