--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -55,6 +55,7 @@ repos:
                 .*/migrations/.*|
                 .*/migration/.*|
                 services/auth-service/src/migration/.*|
+                services/notification-service/src/migration/.*|
                 backup/.*
             )$
 
@@ -69,7 +70,8 @@ repos:
           - "--max-line-length=100"
           - "--extend-ignore=E203,W503,C812,C813,C814,C815S,C816,WPS300,WPS111,WPS431,WPS226,WPS110,WPS404,WPS601,WPS237,WPS202,WPS115,WPS201,WPS232"
           - "--select=WPS"
-        files: ^services/content-actions-service/src
+        files: ^(services/content-actions-service/src|services/notification-service/src)/
+        exclude: ^services/notification-service/src/migration/.*
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.13.0
@@ -82,7 +84,7 @@ repos:
           "--show-error-context",
           "--verbose"
         ]
-        files: services/content-actions-service/src
+        files: ^(services/content-actions-service/src|services/notification-service/src)/
         additional_dependencies:
           - mypy==1.13.0
           - types-ujson
