Финализирую конфигурацию RabbitMQ

--- a/.env.example
+++ b/.env.example
@@ -92,6 +92,14 @@ RABBITMQ_USER=user
 RABBITMQ_PASS=pass
 RABBITMQ_ERLANG_COOKIE=e379f4f0-1e40-4286-af2e-2f8b48c34056
 
+##QUEUE
+###ПРАВИЛО ИМЕНОВОАНИЯ: {объект}.{действие}.{продюсер}.{консюмер}
+RABBITMQ_REVIEW_LIKE_QUEUE=user-review.liked.natification-api.websocket-sender
+RABBITMQ_REGISTERED_QUEUE=user.registered.natification-api.email-sender
+RABBITMQ_MANAGER_MAILING_QUEUE=manager-mailing.launched.natification-api.email-sender
+RABBITMQ_AUTO_MAILING_QUEUE=auto-mailing.launched.natification-api.email-sender
+
+
 #MONGODB
 MONGODB_HOST=mongodb_router
 # MONGODB_HOST=localhost
