--- a/infra/rabbit/rabbitmq.conf
+++ b/infra/rabbit/rabbitmq.conf
@@ -15,6 +15,9 @@ deprecated_features.permit.management_metrics_collection = true
 # Настройки кластеризации
 cluster_formation.peer_discovery_backend = classic_config
 
+# Сбалансированное размещение нод в кластере
+queue_leader_locator = balanced
+
 # Узлы кластера
 cluster_formation.classic_config.nodes.1 = rabbit@rabbitmq-1
 cluster_formation.classic_config.nodes.2 = rabbit@rabbitmq-2
