--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ sqlalchemy = "^2.0.41"
 pytest-asyncio = ">=0.26.0,<1.0.0"
 passlib = "^1.7.4"
 sentry-sdk = "^2.30.0"
+pika = "^1.3.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = ">=4.1.0,<5.0.0"
