Выключаю TRACING  в env.example

--- a/.env.example
+++ b/.env.example
@@ -52,7 +52,7 @@ TRACE_PERCENT=1.0
 
 ##APP_TRACING
 ##Включение/Выключение трассировки
-TRACING=True
+TRACING=False
 
 ##APP_GLITCH_TIP
 IS_GLITCHTIP_ENABLED=False
