--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -15,6 +15,11 @@ server {
     # Общий обработчик ошибок
     error_page 502 503 504 @service_unavailable;
 
+    location /notification-api/ {
+        set $backend "notification-api:8000";
+        proxy_pass http://$backend;
+    }
+
     location /async/ {
         set $backend "async-api:8000";
         proxy_pass http://$backend;
