Добавляю DLQ и переменные окружения ttl

--- a/.env.example
+++ b/.env.example
@@ -91,6 +91,8 @@ KAFKA_OTHER_TOPIC=user_metric_other_event
 RABBITMQ_USER=user
 RABBITMQ_PASS=pass
 RABBITMQ_ERLANG_COOKIE=e379f4f0-1e40-4286-af2e-2f8b48c34056
+RABBITMQ_MESSAGE_TTL=3600000
+RABBITMQ_DLQ_MESSAGE_TTL=86400000
 
 ##QUEUE
 ###ПРАВИЛО ИМЕНОВОАНИЯ: {объект}.{действие}.{продюсер}.{консюмер}
@@ -99,6 +101,8 @@ RABBITMQ_REGISTERED_QUEUE=user.registered.natification-api.email-sender
 RABBITMQ_MANAGER_MAILING_QUEUE=manager-mailing.launched.natification-api.email-sender
 RABBITMQ_AUTO_MAILING_QUEUE=auto-mailing.launched.natification-api.email-sender
 
+##DLQ
+RABBITMQ_DLQ_QUEUE=common_dlq
 
 #MONGODB
 MONGODB_HOST=mongodb_router
