Добавляю новую таблицу в auth, расширяю регистрацию

--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -23,7 +23,8 @@ server {
     error_page 502 503 504 @service_unavailable;
 
     location /rabbitmq/ {
-        proxy_pass http://rabbitmq_management/;
+        set $backend "rabbitmq_management";
+        proxy_pass http://$backend;
     }
 
     location /notification-api/ {
