Реализую endpoint получения профиля пользователя

--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -2,11 +2,11 @@
 resolver 127.0.0.11 valid=10s ipv6=off;
 
 # Upstream для RabbitMQ Management UI
-upstream rabbitmq_management {
-    server rabbitmq-1:15672 max_fails=3 fail_timeout=5s;
-    server rabbitmq-2:15672 max_fails=3 fail_timeout=5s backup;
-    server rabbitmq-3:15672 max_fails=3 fail_timeout=5s backup;
-}
+#upstream rabbitmq_management {
+#    server rabbitmq-1:15672 max_fails=3 fail_timeout=5s;
+#    server rabbitmq-2:15672 max_fails=3 fail_timeout=5s backup;
+#    server rabbitmq-3:15672 max_fails=3 fail_timeout=5s backup;
+#}
 
 server {
     listen       80 default_server;
