Настраиваю alembic и создаю базовые таблицы уведомлений

--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -26,8 +26,8 @@ server {
         proxy_pass http://rabbitmq_management/;
     }
 
-    location /notification-api/ {
-        set $backend "notification-api:8000";
+    location /notification/ {
+        set $backend "notification:8000";
         proxy_pass http://$backend;
     }
 
