--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -204,6 +204,8 @@ services:
     volumes:
       - pg_data_volume:/var/lib/postgresql/data
       - ./backup/postgres_dump-auth/dumps:/dumps
+    ports:
+      - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
       interval: 10s
@@ -229,8 +231,8 @@ services:
         condition: service_healthy
     restart: "no"
 
-  notification-api:
-    container_name: notification-api-container
+  notification:
+    container_name: notification-container
     env_file:
       - .env
     build:
