--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ sentry-sdk = "^2.30.0"
 pika = "^1.3.2"
 asyncpg = "^0.30.0"
 psycopg2 = "^2.9.10"
+orjson = "^3.10.18"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = ">=4.1.0,<5.0.0"
