--- a/services/notification-service/src/pyproject.toml
+++ b/services/notification-service/src/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "uvicorn (==0.34.1)",
     "pydantic-settings (==2.9.1)",
     "fastapi[all] (==0.115.12)",
+    "httpx (>=0.28.1,<0.29.0)",
 ]
 
 [tool.poetry]
