--- a/services/auth-service/tests/functional/pyproject.toml
+++ b/services/auth-service/tests/functional/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "pydantic>=2.11.3,<3.0.0",
     "pydantic-settings>=2.9.1,<3.0.0",
     "passlib>=1.7.4,<2.0.0",
-    "argon2-cffi>=23.1.0,<24.0.0"
+    "argon2-cffi>=23.1.0,<24.0.0",
+    "faker (>=37.4.0,<38.0.0)"
 ]
 
 [tool.poetry]
