--- a/services/ws_notification-service/src/pyproject.toml
+++ b/services/ws_notification-service/src/pyproject.toml
@@ -7,7 +7,7 @@ dependencies = [
     "pydantic (==2.11.7)",
     "pydantic-settings (==2.10.1)",
     "redis (==6.2.0)",
-    "aio-pika (==9.5.5)"
+    "aio-pika (==9.5.5)",
 ]
 
 
