--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -243,6 +243,26 @@ services:
         condition: service_healthy
     restart: "on-failure"
 
+  ws-sender-worker:
+    container_name: ws-sender-worker
+    env_file:
+      - .env
+    build:
+      context: .
+      dockerfile: services/ws_notification-service/src/Dockerfile
+    ports:
+      - 8080:8080
+    depends_on:
+      redis:
+        condition: service_healthy
+      rabbitmq-1:
+        condition: service_healthy
+      rabbitmq-2:
+        condition: service_healthy
+      rabbitmq-3:
+        condition: service_healthy
+    restart: "on-failure"
+
   nginx:
     container_name: nginx
     image: nginx:1.27.5-alpine
