--- a/services/ws_notification-service/src/pyproject.toml
+++ b/services/ws_notification-service/src/pyproject.toml
@@ -6,8 +6,11 @@ dependencies = [
     "aiohttp (==3.12.13)",
     "pydantic (==2.11.7)",
     "pydantic-settings (==2.10.1)",
-    "redis (==6.2.0)",
     "aio-pika (==9.5.5)",
+    "redis (==5.3.0)",
+    "uvicorn (==0.35.0)",
+    "gunicorn (==23.0.0)",
+    "aiohttp-asgi (==0.6.1)",
 ]
 
 
