Добавляю коннектор rabbitmq

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -70,7 +70,7 @@ repos:
           - "--max-line-length=100"
           - "--extend-ignore=E203,W503,C812,C813,C814,C815S,C816,WPS300,WPS111,WPS431,WPS226,WPS110,WPS404,WPS601,WPS237,WPS202,WPS115,WPS201,WPS232"
           - "--select=WPS"
-        files: ^(services/content-actions-service/src|services/notification-service/src)/
+        files: ^(services/content-actions-service/src|services/notification-service/src|services/ws_notification-service/src)/
         exclude: ^services/notification-service/src/migration/.*
 
   - repo: https://github.com/pre-commit/mirrors-mypy
@@ -84,7 +84,7 @@ repos:
           "--show-error-context",
           "--verbose"
         ]
-        files: ^(services/content-actions-service/src|services/notification-service/src)/
+        files: ^(services/content-actions-service/src|services/notification-service/src|services/ws_notification-service/src)/
         additional_dependencies:
           - mypy==1.13.0
           - types-ujson
