--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Test lint
         run: |
-          flake8 services/notification-service/src services/content-actions-service/src \
+          flake8 services/notification-service/src services/content-actions-service/src services/ws_notification-service/src \
           --max-line-length=100 \
           --extend-ignore=E203,W503,C812,C813,C814,C815S,C816,WPS300,WPS111,WPS431,WPS226,WPS110,WPS404,WPS601,WPS237,WPS202,WPS115,WPS201,WPS232 \
           --select=WPS \
@@ -33,6 +33,7 @@ jobs:
           --htmldir=flake-report
           mypy services/content-actions-service/src --config-file=pyproject.toml --no-implicit-reexport
           mypy services/notification-service/src --config-file=pyproject.toml --no-implicit-reexport
+          mypy services/ws_notification-service/src --config-file=pyproject.toml --no-implicit-reexport
 
       - name: Upload flake8 report  # выгружает отчеты по flake8
         if: always()
